tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_children_override_overlap.sk
base class A(f: Bool)
class C(b: Int, c: Bool) extends A
class B extends A

fun myMatch(b: A): String {
  b match {
  | A(false) -> "0"
  | B(true) -> "1"
  | C(1, true, false) -> "2"
  }
}
